Added arm64 support to .goreleaser.yml
Updated the .goreleaser.yml file to generate linux/arm64 release for
bfe.

Signed-off-by: odidev <odidev@puresoftware.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,6 +9,12 @@ builds:
       - windows
     goarch:
       - amd64
+      - arm64
+    ignore:
+      - goos: windows
+        goarch: arm64
+      - goos: darwin
+        goarch: arm64
 
 changelog:
   skip: true
